--- a/projects/client/.eslintrc
+++ b/projects/client/.eslintrc
@@ -7,21 +7,28 @@
     "extends": [
         "plugin:@typescript-eslint/recommended",
         "prettier/@typescript-eslint",
-        "plugin:prettier/recommended"
+        "plugin:prettier/recommended",
+        "plugin:react/recommended"
     ],
-    "rules": {
-        "no-unused-vars": "off",
-        "no-trailing-spaces": "warn",
-        "@typescript-eslint/explicit-function-return-type": "off",
-        "@typescript-eslint/no-explicit-any": 1,
-        "@typescript-eslint/no-inferrable-types": [
-            "warn",
-            {
-                "ignoreParameters": true
-            }
-        ],
-        "@typescript-eslint/no-unused-vars": "warn",
-        "@typescript-eslint/no-var-requires": "off",
-        "@typescript-eslint/interface-name-prefix": "off"
+    "settings": {
+        "react": {
+            "pragma": "React", // Pragma to use, default to "React"
+            "version": "detect" // React version. "detect" automatically picks the version you have installed.
+        },
+        "rules": {
+            "no-unused-vars": "off",
+            "no-trailing-spaces": "warn",
+            "@typescript-eslint/explicit-function-return-type": "off",
+            "@typescript-eslint/no-explicit-any": 1,
+            "@typescript-eslint/no-inferrable-types": [
+                "warn",
+                {
+                    "ignoreParameters": true
+                }
+            ],
+            "@typescript-eslint/no-unused-vars": "warn",
+            "@typescript-eslint/no-var-requires": "off",
+            "@typescript-eslint/interface-name-prefix": "off"
+        }
     }
 }
