--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -62,6 +62,7 @@
     "@types/copy-webpack-plugin": "^6.0.0",
     "@types/webpack": "^4.41.21",
     "ts-node": "^8.10.1",
-    "@types/webpack-dev-server": "^3.11.0"
+    "@types/webpack-dev-server": "^3.11.0",
+    "eslint-plugin-react": "^7.20.3"
   }
 }
