--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -24,7 +24,8 @@
     "axios": "^0.19.2",
     "registrum-common": "^0.1.0",
     "@babel/plugin-transform-runtime": "^7.10.4",
-    "regenerator-runtime": "^0.13.5"
+    "regenerator-runtime": "^0.13.5",
+    "uniq": "^1.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.4",
@@ -63,6 +64,7 @@
     "@types/webpack": "^4.41.21",
     "ts-node": "^8.10.1",
     "@types/webpack-dev-server": "^3.11.0",
-    "eslint-plugin-react": "^7.20.3"
+    "eslint-plugin-react": "^7.20.3",
+    "@types/uniq": "^0.0.27"
   }
 }
