--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,9 +4,6 @@ on:
   push:
   create:
   release:
-    tags:
-      - v*
-    types: [published]
   pull_request:
   workflow_dispatch:
     inputs:
@@ -56,6 +53,6 @@ jobs:
         curl -X POST -H "Content-Type: application/json" -d "{}" '${{ secrets.STAGING_HOOK }}'
 
     - name: Trigger Hooks - release
-      if: startsWith(github.ref, 'refs/tags/')
+      if: startsWith(github.ref, 'refs/tags/v')
       run: |
         curl -X POST -H "Content-Type: application/json" -d "{}" '${{ secrets.PROD_HOOK }}'
