--- a/projects/client/package.json
+++ b/projects/client/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "npx webpack --mode development",
+    "build": "npx webpack --mode production",
+    "build:dev": "npx webpack --mode development",
     "lint": "eslint \"src/**/*.{js,ts}\"",
     "lint:fix": "npm run lint -- --fix",
     "test": "echo 'No Tests' && exit 0",
@@ -82,6 +83,8 @@
     "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "^2.2.0",
     "webpack-pwa-manifest": "^4.2.0",
-    "workbox-webpack-plugin": "^5.1.3"
+    "workbox-webpack-plugin": "^5.1.3",
+    "terser-webpack-plugin": "^3.0.7",
+    "@types/terser-webpack-plugin": "^3.0.0"
   }
 }
